0.8.8
 - Bugfixes:
   - "Mean of empty slice" error when attempting to plot bad data 
 - New ancillary features in expert mode:
   - Principal inertia ratio (dclab 0.6.3.dev1)
   - Absolute tilt of raw contour (dclab 0.6.3.dev2)
 - Add computation of Young's modulus for water medium (dclab 0.6.3.dev14)
 - Display data paths as tool tip in title editor (Contour Plot tab) (#227)
0.8.7
 - Bugfixes:
   - Search for missing datasets was falsely extended to directories
     not chosen by the user
   - Add recording date/time tooltip in the analysis tab to avoid
     ambiguities (#223)
   - Allow arbitrary number of repetitions for mixed model analysis
     with a spin control (#222)
   - Setting the treatment to "None" for (g)lmm analysis did not
     exclude it from the analysis, but introduced it as a different
     treatment (#224)
   - Channel width not correctly identified for old tdms files
     (dclab 0.6.2.dev7)
   - Do not draw isoelastics in contour plot if measurements have
     different channel widths
 - Automatically identify treatment and repetition for mixed model
   analysis (#222)
 - Automated release to PyPI with appveyor
 - Begin migration of docs to sphinx/readthedocs.org
0.8.6
 - Refactoring:
   - Use pathlib instead of os.path for
     - All session handling/conversion tasks
     - Configuration file management
     - Measurement/Analysis management
   - Support all changes to dclab.definitions (dclab 0.4.0)
   - Support all changes to dclab.features (dclab 0.5.0)
 - Bugfixes:
   - Opening sessions containing paths to data with a hash "#" failed
   - AttributeError during autosave when no measurement data is available
   - Exporting to .fcs files failed due to NaN-valued events; Events
     containing NaN values are now ignored (fcswrite 0.1.3.dev22) (#215)
   - Improve displayed float values for selected configuration keys (#216)
   - Unicode error when searching for data sets on disk (#218)