@@ -11,6 +11,14 @@ from .controls_subpanel import SubPanel
 # These are values hidden in the user interface
 HIDDEN = ["exposure time",
           "video frame offset",
+          "bit depth",
+          "channels installed",
+          "laser count",
+          "lasers installed",
+          "sample rate",
+          "signal max",
+          "signal min",
+          "trace median",
           ]
 
 
@@ -28,20 +36,25 @@ class SubPanelInfo(SubPanel):
         imbox = self._box_from_cfg_read(analysis, "imaging", ignore=HIDDEN)
         frbox = self._box_from_cfg_read(analysis, "setup", ignore=HIDDEN)
         roibox = self._box_from_cfg_read(analysis, "online_filter", ignore=HIDDEN)
+        flbox = self._box_from_cfg_read(analysis, "fluorescence", ignore=HIDDEN)
+
         # same size 
         h = genbox.GetMinSize()[1]
         h = max(h, imbox.GetMinSize()[1])
         h = max(h, frbox.GetMinSize()[1])
         h = max(h, roibox.GetMinSize()[1])
+        h = max(h, flbox.GetMinSize()[1])
         h = max(h, 50)
         genbox.SetMinSize((-1, h))
         imbox.SetMinSize((-1, h))
         frbox.SetMinSize((-1, h))
         roibox.SetMinSize((-1, h))
+        flbox.SetMinSize((-1, h))
         sizer.Add(genbox)
         sizer.Add(imbox)
         sizer.Add(frbox)
         sizer.Add(roibox)
+        sizer.Add(flbox)
         self.SetSizer(sizer)
         sizer.Fit(self)
                 
